--- a/project_name/static/css/structure.css
+++ b/project_name/static/css/structure.css
@@ -1,24 +1,33 @@
 /*uncomment this to fix footer to bottom */
-/** {*/
-    /*margin: 0;*/
-    /*padding: 0;*/
-/*}*/
-/*html {height: 100%;}*/
+* {
+    margin: 0;
+    padding: 0;
+}
+html {height: 100%;}
 
-/*body {*/
-    /*min-height: 100%;*/
-    /*position: relative;*/
-/*}*/
+body {
+    min-height: 100%;
+    position: relative;
+}
 
-/*body > .container {*/
-    /*position: relative;*/
-    /*padding-bottom: 100px;*/
-/*}*/
+header {
+
+}
+
+body > .container {
+    position: relative;
+    padding-bottom: 70px;
+}
 
 
-/*footer {*/
-    /*height: 90px;*/
-    /*position: absolute;*/
-    /*bottom: 0;*/
-    /*width: 100%;   */
-/*}*/
+footer {
+    height: 55px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: black;
+    color: #e1e1e1;
+}
+footer > .container{
+    margin-top: 10px;
+}
