--- a/project_name/templates/home.html
+++ b/project_name/templates/home.html
@@ -3,9 +3,28 @@
 
 {% block content %}
 
-    <h1>Main page</h1>
-    <div class="gap-10"></div>
+    <hr>
+    <h1>Ваша новая жизнь с сайтом от <span class="big">Социогенетики</span></h1>
+    <hr>
+    <div class="gap-20"></div>
 
-    {{ page.content|safe }}
+    <div class="row">
+        <div class="col-lg-9">
+
+            {{ page.content|safe }}
+        </div>
+        <div class="col-lg-3">
+            <h3 class="text-left">Мысли деревьев</h3>
+
+            <div class="panel">
+                <p class="small">Песню, что ветер несет, пропой.</p>
+                <p class="small">Мы будем сидеть под деревом,</p>
+                <p class="small">Просто сидеть под деревом</p>
+                <p class="small">И слышать его мысли...</p>
+            </div>
+        </div>
+    </div>
+
+
 
 {% endblock %}
