--- a/project_name/templates/include/footer.html
+++ b/project_name/templates/include/footer.html
@@ -1,1 +1,15 @@
-site footer
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="gap-10"></div>
+                &copy; 2009-2014, Агентство &laquo;Социогенетика&raquo;
+            </div>
+            <div class="col-lg-8 text-right">
+                <a href="http://sociogenetics.ru">
+                    <img src="{{ STATIC_URL }}img/dev-white.png" alt="Разработчик"/>
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
