--- a/project_name/templates/include/head.html
+++ b/project_name/templates/include/head.html
@@ -19,3 +19,7 @@
 <link href="{{ STATIC_URL }}css/typography.css" rel="stylesheet" type="text/css" />
 <link href="{{ STATIC_URL }}css/structure.css" rel="stylesheet" type="text/css" />
 <link href="{{ STATIC_URL }}css/elements.css" rel="stylesheet" type="text/css" />
+
+<link href="http://webfonts.ru/import/bebasneue.css" rel="stylesheet" type="text/css" />
+<link href="http://webfonts.ru/import/clearsans.css" rel="stylesheet" type="text/css" />
+<link href="http://webfonts.ru/import/fira.css" rel="stylesheet" type="text/css" />
