--- a/project_name/static/css/typography.css
+++ b/project_name/static/css/typography.css
@@ -1,18 +1,47 @@
 /*like a typography*/
+body {
+    color: #414141;
+    /*font-family: 'Arsenal';*/
+    font-family: 'Fira Sans';
+
+}
+
 h1, h2, h3, h4, h5 {
     font-weight: normal;
 }
 
 h1 {
-
+    font-family: 'Bebas Neue';
+    font-weight: 200;
+    font-size: 60px;
+    letter-spacing: 0.1em;
+    text-align: center;
+    color: #bcbcbc;
+    line-height: 1.8;
+    margin-top: 30px;
 }
+    h1 .big{
+        font-weight: 200;
+        font-size: 140px;
+        letter-spacing: 0.08em;
+        line-height: 0.9;
+    }
 
 h2 {
-
+    font-family: 'Clear Sans';
+    margin-bottom: 20px;
+    font-size: 40px;
+    font-weight: 200;
 }
 
 h3 {
-
+    font-family: 'Arsenal';
+    font-family: 'Clear Sans';
+    font-weight: 200;
+    border-bottom: 1px solid #c5c5c5;
+    padding-bottom: 5px;
+    margin-bottom: 20px;
+    color: #8e8e8e;
 }
 
 h4 {
@@ -36,15 +65,18 @@ h4 {
 }
 
 p {
-
+    font-size: 18px;
+    line-height: 1.7;
+    text-align: justify;
 }
 
 a {
-
+    color: #5d5d5d;
 }
 
 a:hover {
-
+    color: #000000;
+    text-decoration: none;
 }
 
 br.clear {
@@ -60,7 +92,7 @@ textarea {
 }
 
 hr {
-
+    border-top: 1px solid #c2c2c2;
 }
 
 blockquote{
