--- a/project_name/templates/page.html
+++ b/project_name/templates/page.html
@@ -2,13 +2,19 @@
 {% load xendor_tags %}
 
 {% block content %}
-
-    <h1><span>{{ page.title }}</span></h1>
-    <div class="gap-10"></div>
+    <hr>
+    <h1>{{ page.title }}</h1>
+    <hr>
 
     {% breadcrumbs %}
 
+    <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
 
-    {{ page.content|safe }}
+            {{ page.content|safe }}
+        </div>
+
+    </div>
 
 {% endblock %}
