--- a/project_name/templates/include/header.html
+++ b/project_name/templates/include/header.html
@@ -5,7 +5,7 @@
             <div class="col-lg-2">
                 <div class="logo">
                     <a href="/">
-                        <img src="{{ STATIC_URL }}/img/logo.png" alt=""/>
+                        <img src="{{ STATIC_URL }}img/logo.png" alt=""/>
                     </a>
                 </div>
             </div>
